--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">ToastMaster</string>
-    <string name="app_name_timer">TM Timer</string>
+    <string name="app_name">SOTM timer</string>
+    <string name="app_name_timer">SOTM Timer</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Samsung One Toast Master</string>
@@ -11,8 +11,11 @@
 
     <string name="menu_meeting">Meeting</string>
     <string name="menu_roles">Role Guide</string>
-    <string name="menu_timer">ToastMaster Timer</string>
+    <string name="menu_timer">SOTM Timer</string>
     <string name="menu_vote">Vote</string>
     <string name="menu_stats">Statistics</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
+    <string name="green">Green</string>
 
 </resources>
