--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="action_test_mode">Change to test mode</string>
     <string name="action_normal_mode">Change to normal mode</string>
     <string name="action_show_record">Show speech time record</string>
+    <string name="action_settings">Settings</string>
 
     <string name="menu_meeting">Meeting</string>
     <string name="menu_roles">Role Guide</string>
@@ -23,4 +24,19 @@
     <string name="action_sort_by_name">Sort by name</string>
     <string name="action_sort_by_roles">Sort by roles</string>
     <string name="action_sort_by_creation">Sort by creation time</string>
+
+    <string name="buffer_time_policy_default">Speeches of up to 2 minutes are given a 15-second buffer time.
+        and speeches over 2 minutes are given a 30-second buffer time.
+    </string>
+
+    <string name="green_card_show_option_show_exactly_judge_early">
+        Show green card at the given time exactly but judge the qualification considering buffer time.
+    </string>
+    <string name="green_card_show_option_show_exactly_judge_exactly">
+        Show green card at the given time exactly and judge the qualification without considering buffer time.
+    </string>
+    <string name="green_card_show_option_show_early_judge_early">
+        Show green card earlier than the original tim by the buffer time.
+    </string>
+
 </resources>
