1. implement the timerRunActivity with Compose 2. add beep sound

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,5 @@
     <string name="green_card_show_option_show_early_judge_early">
         Show green card earlier than the original tim by the buffer time.
     </string>
-    <string name="remaining_notification">This is remaining time.\nTouch to view elapsed time</string>
+    <string name="remaining_notification">This is remaining time.\nTouch to view elapsed time.</string>
 </resources>
